# openvino_demo

./: CMakeLists.txt  README.md  main.cpp
include/: runners.hpp
src/: ie_runner.cpp  ocv_runner.cpp
